# First-Human-AI-Assistant

./: .env.example  .gitignore  Features.md  LICENSE  Permissions.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs/: architecture.md  roadmap.md  vision.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/ai/: openaiFeedback.ts
src/integrations/: plugins.ts
src/voice/: audio.ts  useWhisperTranscription.ts
