[package]
name = "xo-human-first-agent"
version = "0.1.0"
description = "XO Human First AI desktop assistant"
authors = ["XO"]
edition = "2021"

[lib]
name = "xo_human_first_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
keyring = { version = "3", features = ["windows-native"] }
rand = "0.8"
sha2 = "0.10"
